follow up some FindBugs fixes
git-svn-id: http://subversion.assembla.com/svn/Debrief@3206 cb33b658-6c9e-41a7-9690-cba343611204